# XenonRecomp_Rust

./: .gitignore  CMakeLists.txt  Cargo.toml  build.rs
src/: config.rs  db.rs  disasm.rs  function.rs  image.rs  lib.rs  log.rs  lzx.rs  main.rs  pipeline.rs  ppc.rs  switch.rs  xex.rs
src/backup/: instructions.rs.back  recompiler.rs.back  vector_pack.rs.back  xbox_symbols.rs.back  xenon_recomp.rs.back
src/passes/: analyse_function.rs  analyse_switch_bind.rs  analyse_switch_scan.rs
src/recompiler/: analyse.rs  emit.rs  externs.rs  mod.rs  ppc_context.rs  symbol.rs
src/recompiler/instructions/: ctx.rs  dispatch.rs  mod.rs
src/recompiler/instructions/handle/: arith.rs  bitcount.rs  branch.rs  cache.rs  compare.rs  divide.rs  extend.rs  float_ops.rs  loads.rs  loads_vec.rs  logical.rs  mod.rs  moves_spr.rs  rotate.rs  shift.rs  stores.rs  stores_vec.rs  system.rs  vector_arith.rs  vector_cmp.rs  vector_misc.rs  vector_pack.rs  vector_perm.rs  vector_shift.rs
test/xex-Fable/: Ida function dump.txt
test/xex-Fable/output/: lib.rs  ppc_000.rs  ppc_001.rs  ppc_004.rs  ppc_007.rs  ppc_009.rs  ppc_010.rs  ppc_011.rs  ppc_012.rs  ppc_013.rs  ppc_014.rs  ppc_015.rs  ppc_016.rs  ppc_017.rs  ppc_018.rs  ppc_019.rs  ppc_020.rs  ppc_021.rs  ppc_022.rs  ppc_023.rs  ppc_024.rs  ppc_025.rs  ppc_026.rs  ppc_027.rs  ppc_028.rs  ppc_029.rs  ppc_030.rs  ppc_031.rs  ppc_032.rs  ppc_033.rs  ppc_034.rs  ppc_035.rs  ppc_036.rs  ppc_037.rs  ppc_038.rs  ppc_039.rs  ppc_040.rs  ppc_041.rs  ppc_042.rs  ppc_043.rs  (+195 more)
test/xex-Iruka/output/: lib.rs  ppc_000.rs  ppc_001.rs  ppc_002.rs  ppc_003.rs  ppc_005.rs  ppc_006.rs  ppc_007.rs  ppc_009.rs  ppc_010.rs  ppc_011.rs  ppc_016.rs  ppc_017.rs  ppc_018.rs  ppc_019.rs  ppc_020.rs  ppc_func_mapping.rs
test/xex/output/: lib.rs  ppc_000.rs  ppc_001.rs  ppc_002.rs  ppc_003.rs  ppc_004.rs  ppc_005.rs  ppc_006.rs  ppc_007.rs  ppc_009.rs  ppc_010.rs  ppc_011.rs  ppc_012.rs  ppc_013.rs  ppc_014.rs  ppc_015.rs  ppc_016.rs  ppc_017.rs  ppc_018.rs  ppc_019.rs  ppc_020.rs  ppc_021.rs  ppc_022.rs  ppc_023.rs  ppc_024.rs  ppc_025.rs  ppc_026.rs  ppc_027.rs  ppc_028.rs  ppc_029.rs  ppc_030.rs  ppc_031.rs  ppc_032.rs  ppc_033.rs  ppc_034.rs  ppc_035.rs  ppc_036.rs  ppc_037.rs  ppc_038.rs  ppc_039.rs  (+202 more)
